--- a/css/support.css
+++ b/css/support.css
@@ -77,7 +77,7 @@ h6, .h6 {
   padding-top: 10px;
   padding-bottom: 20px;
   padding-left: 40px;
-  background-color: purple;
+  background-color: #738BFF;
   height: 250px;
  
 }
@@ -86,7 +86,7 @@ h6, .h6 {
   margin-bottom: 0;
   font-size: 60px;
   font-weight: normal;
-  color: orange;
+  color: #C0CBFF;
 }
 .hdescription {
   font-size: 20px;
